# rezervo-alpine

./: .gitignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  template.env  tsconfig.json  vite.config.ts
.github/workflows/: status_checks.yaml
auth-proxy/: Cargo.toml
auth-proxy/src/: main.rs
docker/: docker-entrypoint.sh  nginx.conf
public/: config.json.example  manifest.webmanifest
src/: callback.html  chains.html  login.html  schedule.html  sessions.html
src/styles/: main.css
src/ts/: api.ts  auth.ts  config.ts
src/ts/components/: callbackPage.ts  chainsPage.ts  loginPage.ts  schedulePage.ts  sessionsPage.ts
src/ts/schemas/: chain.ts  chainConfig.ts  schedule.ts  session.ts
src/ts/utils/: date.ts  recurrentId.ts
